# Sentinel-Flow

./: .clang-format  .gitignore  .init_docs.sh.swp  CMakeLists.txt  README.md  go.mod  test.sh
.github/workflows/: ci.yml
cmake/: FindPCAP.cmake
cmd/sentinel/: main.go
configs/: rules.yaml
docs/: ARCHITECTURE.md  DATA_FLOW.md  DIRECTORY_STRUCTURE.md  ROADMAP.md
docs/architecture/: ARCHITECTURE.md  DATA_FLOW.md  HYPER_EXCHANGE_MODEL.md  THREADING_MODEL.md
docs/capture/: EBPF_STRATEGY.md  PCAP_DRIVER.md  ZERO_COPY_POOL.md
docs/engine/: AC_AUTOMATON_IDS.md  PIPELINE_DESIGN.md  RULES_PARSER.md
docs/operations/: LINUX_CAPABILITIES.md  PERFORMANCE_TUNING.md
docs/presentation/: CLI_DAEMON.md  QT6_RENDER_ENGINE.md
docs/storage/: EVIDENCE_GENERATION.md  SQLITE_WAL_LOGGING.md
evidences/: batch_20260408_125259_count_2.pcap
libsentinel/: CMakeLists.txt
libsentinel/include/sentinel/: capi.h
libsentinel/src/: capi_impl.cpp
libsentinel/src/capture/driver/: EBPFCapture.cpp  EBPFCapture.h
libsentinel/src/capture/impl/: PcapCapture.cpp  PcapCapture.h
libsentinel/src/capture/interface/: ICaptureDriver.h
libsentinel/src/common/memory/: ObjectPool.h
libsentinel/src/common/queues/: SPSCQueue.h
libsentinel/src/common/types/: NetworkTypes.h
libsentinel/src/common/utils/: StringUtils.h
libsentinel/src/engine/context/: DatabaseManager.cpp  DatabaseManager.h
libsentinel/src/engine/flow/: AhoCorasick.h  PacketParser.cpp  PacketParser.h  SecurityEngine.cpp  SecurityEngine.h
libsentinel/src/engine/governance/: AuditLogger.h
libsentinel/src/engine/interface/: IInspector.h
libsentinel/src/engine/pipeline/: PacketPipeline.cpp  PacketPipeline.h
libsentinel/src/engine/workers/: ForensicWorker.h  WorkerBase.h
pkg/engine/: binding.go
src/: main.cpp
src/capture/driver/: EBPFCapture.h  xdp_prog.c
src/capture/impl/: PcapCapture.cpp  PcapCapture.h
src/capture/interface/: ICaptureDriver.h
src/common/memory/: ObjectPool.h
src/common/queues/: SPSCQueue.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h
src/common/types/: NetworkTypes.cpp  NetworkTypes.h
src/common/utils/: StringUtils.h
src/engine/context/: DatabaseManager.cpp  DatabaseManager.h  ForensicManager.h
src/engine/flow/: AhoCorasick.h  PacketParser.cpp  PacketParser.h  SecurityEngine.cpp  SecurityEngine.h
src/engine/governance/: AuditLogger.h
src/engine/interface/: IInspector.h
src/engine/pipeline/: PacketPipeline.cpp  PacketPipeline.h
src/engine/workers/: ForensicWorker.h
src/presentation/adapters/: PipelineAdapter.cpp  PipelineAdapter.h
src/presentation/app/: SentinelLauncher.cpp  SentinelLauncher.h
src/presentation/cli/: CliEngineManager.cpp  CliEngineManager.h
src/presentation/controllers/: MainController.h
src/presentation/models/: TrafficModel.h
src/presentation/views/: MainWindow.cpp  MainWindow.h
src/presentation/views/components/: BpfHighlighter.h  PacketDetailRenderer.cpp  PacketDetailRenderer.h  StatCard.cpp  StatCard.h  TrafficTableModel.cpp  TrafficTableModel.h  TrafficWaveChart.cpp  TrafficWaveChart.h  UIFactory.cpp  UIFactory.h
src/presentation/views/pages/: AlertsPage.cpp  AlertsPage.h  DashboardPage.cpp  DashboardPage.h  ForensicPage.h  RulesPage.cpp  RulesPage.h  SettingsPage.cpp  SettingsPage.h  StatisticsPage.cpp  StatisticsPage.h  ThemeablePage.h  TrafficMonitorPage.cpp  TrafficMonitorPage.h
src/presentation/views/pages/rules/: IdsRulesTab.cpp  IdsRulesTab.h
src/presentation/views/styles/: AlertsStyle.h  DashboardStyle.h  RulesStyle.h  SettingsStyle.h  StatisticsStyle.h  ThemeDefinitions.h  ThemeManager.h  TrafficMonitorStyle.h  global.h
tests/: CMakeLists.txt  test_core_engine.cpp
